<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Mike Wakerly <opensource@hoho.com>.
  
  This file is part of the Kegtab package from the Kegbot project. For
  more information on Kegtab or Kegbot, see <http://kegbot.org/>.
  
  Kegtab is free software: you can redistribute it and/or modify it under
  the terms of the GNU General Public License as published by the Free
  Software Foundation, version 2.
  
  Kegtab is distributed in the hope that it will be useful, but WITHOUT
  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  more details.
  
  You should have received a copy of the GNU General Public License along
  with Kegtab. If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="authenticating_begin_title">Authenticating&#8230;</string>
    <string name="authenticating_fail_title">Access Denied!</string>
    <string name="authenticating_no_access_token">Your access token was not recognized.</string>
    <string name="authenticating_connection_error">Could not contact the Kegbot server.</string>
    <string name="hello">Give me a beer!</string>
    <string name="app_name">Kegbot</string>
    <string name="events_title">recent events</string>
    <string name="taps_title">on tap</string>
    <string name="tap_name"><xliff id="tap_name">%s</xliff>: <xliff id="beverage_name">%s</xliff></string>
    <string name="empty_tap"><i>empty</i></string>
    <string name="menu_settings">Settings</string>
    <string name="menu_manage_taps">Manage Taps</string>
    <string name="settings_name">Settings</string>
    <string name="settings_general_header">General</string>
    <string name="settings_kegerator_header">Kegerator</string>
    <string name="settings_about_header">About</string>
    <string name="pour_take_picture">Take Picture</string>
    <string name="picture_countdown_3">3&#8230;</string>
    <string name="picture_countdown_2">2&#8230;</string>
    <string name="picture_countdown_1">1&#8230;</string>
    <string name="setup_welcome_title">Welcome to Kegbot!</string>
    <string name="setup_welcome_description">Looks like this is your first time running Kegbot. Cool!\n\nWe\'re going to need a little information to get started. Tap the &quot;Next&quot; button below to continue.</string>
    <string name="setup_upgrade_title">Upgrade Kegbot</string>
    <string name="setup_upgrade_description">Kegbot has been updated. Please verify your current settings before continuing. Tap the &quot;Next&quot; button below to continue.</string>
    <string name="setup_kegbot_url_title">Kegbot URL</string>
    <string name="setup_kegbot_url_description">We need to talk to your Kegbot system in order to load drinkers, tap status, and other information. Please enter the URL of your Kegbot system.</string>
    <string name="setup_kegbot_url_url_name">Kegbot URL</string>
    <string name="setup_kegbot_url_url_description">Enter the main URL.</string>
    <string name="setup_dialog_validate_title">Verifying&#8230;</string>
    <string name="setup_dialog_validate_description">Verifying information, please wait&#8230;</string>
    <string name="setup_log_in_title">Log In</string>
    <string name="setup_log_in_description">In order to talk to your Kegbot server, the Kegtab application needs an API key.\n\nPlease log in with a manager account in order to accquire an API key for this application. Your password will not be saved.</string>
    <string name="setup_finished_title">Done!</string>
    <string name="setup_finished_description">You\'re all set! Your Kegtab is now configured. Press Next to finish. Please drink responsibly.</string>
    <string name="setup_run_core_title">Run Core</string>
    <string name="setup_run_core_description">Do you want to run this system as a Kegbot Core?\n\nWhen running as the <i>Kegbot Core</i>, the Kegtab application will read hardware and report drinks back to your Kegbot system.\n\nIf you say No, Kegtab will run in browser-only mode, allowing you to look at your Kegbot data. Most people should say Yes.</string>
    <string name="setup_run_core_name">Run Core?</string>
    <string name="setup_manager_pin_title">Manager Pin (Optional)</string>
    <string name="setup_manager_pin_description">Set a manager PIN to prevent unauthorized access to Kegtab application settings.\n\nThis value is only used locally. If you forget the PIN value, you will need to reset Kegtab.</string>
    <string name="setup_select_backend_title">Configure Data Storage</string>
    <string name="setup_select_backend_description">Where do you want Kegbot to store data, such as pour records, keg status, and pictures?\n\nUsing internal storage is simpler to set up, but some features require a Kegbot Server.</string>
    <string name="setup_select_backend_server">Save to Kegbot Server</string>
    <string name="setup_select_backend_server_description">Link to a Kegbot Server and use it for data storage.</string>
    <string name="setup_select_backend_local">Use internal storage</string>
    <string name="setup_select_backend_local_description">Save data locally, without using a web server.</string>
    <string name="setup_select_backend_local_warning_title">Important Notice</string>
    <string name="setup_select_backend_local_warning_description">Standalone mode is still an experimental feature.\n\nBecause all data is stored locally and not on a remote server, there is an increased chance that you could lose Kegbot data due to bugs, a lost manager pin, or device failure.</string>
    <string name="setup_select_backend_local_warning_ok">Continue</string>
    <string name="camera_discard_picture">Discard</string>
    <string name="camera_take_another">Re-Take</string>
    <string name="kegbot_core_running">Kegbot Core is running</string>
    <string name="beer_me_button">Beer Me!</string>
    <string name="new_drinker_button">New Drinker</string>
    <string name="recent_activity_header">Recent Activity</string>
    <string name="license_agreement_description">By continuing, you agree to be bound by the terms of the Kegtab license agreement at kegbot.org/android/license</string>
    <string name="privacy_policy_agreement">By continuing, you agree to the terms of the Kegbot privacy policy at kegbot.org/about/privacy</string>
    <string name="checkbox_agree_text">I Agree</string>
    <string name="setup_license_title">Before You Continue&#8230;</string>
    <string name="setup_license_description">You\'re free to use this app, but your use is governed by the License Agreement and Privacy Policy linked at right.</string>
    <string name="checkin_update_available_title">Kegbot update available</string>
    <string name="checkin_update_required_title">Kegbot update required</string>
    <string name="checkin_update_description">Tap to update Kegbot</string>
    <string name="alert_network">Network Problem</string>
    <string name="update_available">Update Available</string>
    <string name="menu_bugreport">Bugreport</string>
    <string name="bugreport_title">Report a Bug</string>
    <string name="bugreport_message_idle">Tap to build a bugreport.</string>
    <string name="bugreport_message_running">Collecting bugreport data&#8230;</string>
    <string name="bugreport_message_ready">Bugreport collected. Please add detail below, and tap the button to launch your e-mail app.</string>
    <string name="bugreport_message_submitting">Submitting bugreport&#8230;</string>
    <string name="bugreport_message_submitted">Thanks! Bugreport submitted.</string>
    <string name="bugreport_button_idle">Collect Bugreport</string>
    <string name="bugreport_button_ready">Send Bugreport</string>
    <string name="bugreport_detail_hint">Describe the problem and any steps leading to it.</string>
    <string name="manager_pin_title">Please enter the Manager Pin to continue.</string>
    <string name="manager_pin_error">You have entered an incorrect pin. Please try again.</string>
    <string name="calibrate_help_text">Pour into a glass or measuring cup with a known volume. Then drag the slider (or tap the volume number) to set the actual amount poured.</string>
    <string name="calibrate_dialog_no_ticks_title">Please pour first</string>
    <string name="calibrate_dialog_no_ticks_message">Your meter has not registered any ticks yet. Please pour something before setting a custom volume.</string>
    <string name="calibrate_dialog_custom_title">Enter actual volume</string>
    <string name="calibrate_dialog_custom_message">Enter the actual volume of the pour below.</string>
    <string name="new_keg_help_text">Enter keg details below.</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="manager_pin_description">Secret PIN for manager access.</string>
    <string name="example_url">http://kegbot.example.com</string>
    <string name="license_agreement_title">License</string>
    <string name="password_title">Password</string>
    <string name="password_description">Your Kegbot account password.</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="username_title">Username</string>
    <string name="username_description">Your Kegbot account name.</string>
    <string name="register_username_description">Pick a username. It\'s public and permanent!</string>
    <string name="register_photo_description">Almost there! How about a mugshot? (It\'s optional.)</string>
    <string name="register_email_description">We need your e-mail address!</string>
    <string name="title_tap_list">Taps</string>
    <string name="title_tap_detail">Tap Detail</string>
    <string name="tap_detail_tap_empty">Idle Tap</string>
    <string name="end_keg_button">End Current Keg</string>
    <string name="tap_keg_button">Start New Keg</string>
    <string name="controller_alert_title_new">New Hardware Detected</string>
    <string name="new_controller_title">New Controller Connected</string>
    <string name="new_controller_controller_name">Controller Name: </string>
    <string name="new_controller_num_meters_title">How many meters does this controller support?</string>
    <string name="new_controller_status_adding">Adding new controller&#8230;</string>
    <string name="new_controller_status_added">Controller added successfully.</string>
    <string name="new_controller_button_add">Add</string>
    <string name="new_controller_button_cancel">Cancel</string>
</resources>
