<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Mike Wakerly <opensource@hoho.com>.
  
  This file is part of the Kegtab package from the Kegbot project. For
  more information on Kegtab or Kegbot, see <http://kegbot.org/>.
  
  Kegtab is free software: you can redistribute it and/or modify it under
  the terms of the GNU General Public License as published by the Free
  Software Foundation, version 2.
  
  Kegtab is distributed in the hope that it will be useful, but WITHOUT
  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  more details.
  
  You should have received a copy of the GNU General Public License along
  with Kegtab. If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/alertUpdate"
        android:showAsAction="ifRoom|withText"
        android:title="@string/update_available"
        android:icon="@drawable/icon_download"
        android:visible="false"/>
    
    <item
        android:id="@+id/alertGeneral"
        android:showAsAction="ifRoom|withText"
        android:title="@string/update_available"
        android:icon="@drawable/icon_warning"
        android:visible="false"/>
    
    <item
        android:id="@+id/alertNetwork"
        android:showAsAction="ifRoom|withText"
        android:title="@string/alert_network"
        android:icon="@drawable/icon_warning"
        android:visible="false"/>
    
    <item
        android:id="@+id/settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
        <item
        android:id="@+id/manageTap"
        android:showAsAction="never"
        android:title="@string/menu_manage_tap"/>
    
    <item
        android:id="@+id/bugreport"
        android:showAsAction="never"
        android:title="@string/menu_bugreport"/>
    
</menu>